# taylor

./: .gitignore  Makefile  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml  worker.py
backend/core/: email_client.py  redis_conn.py
backend/database/migrations/versions/: 1e0229a6855c_crate_table_password_resert.py  2db5b8ae1ac0_add_colluns_file_path_and_original_.py  994b6db2d451_create_structure_chat.py  b3a8709703ff_create_table_user.py  dfd970676c3c_change_ids_roles_and_last_login.py
backend/database/models/: __init__.py  conversations.py  messages.py  password_reset.py  user.py  user_memory.py  waitingline.py
backend/db/: databese.py
backend/jobs/: queue.py  tasks.py
backend/middlewares/: me_required.py  reset_required.py
backend/routes/: status.py  waitingline.py
backend/routes/auth/: logout.py  me.py  recover.py  register.py  reset.py  signin.py  singin.py
backend/routes/websocket/: chat.py
backend/services/: status_services.py  waitingline_services.py
backend/services/auth/: logout_services.py  me_services.py  recover_services.py  register_services.py  reset_services.py  signin_services.py  singin_services.py
backend/services/websocket/: chat_services.py
frontend/: .dockerignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/status/: page.tsx
frontend/app/waitingline/: page.tsx
frontend/components/Assets/: Business.tsx  Header.tsx  Loading.tsx
nginx/: Dockerfile  default.conf
(+41 files in other folders)
